<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:padding="@dimen/small_margin"
    tools:context=".views.AddNewBookFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/book_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_book_24" />

        <LinearLayout
            android:id="@+id/book_text_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/book_image"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/book_title_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_book_title_req"
                android:padding="@dimen/little_margin"
                app:layout_constraintEnd_toStartOf="@id/book_rank"
                app:layout_constraintStart_toEndOf="@id/book_image"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/book_title_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/book_author_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_book_author_req"
                android:padding="@dimen/little_margin"
                app:layout_constraintEnd_toStartOf="@id/book_rank"
                app:layout_constraintStart_toEndOf="@id/book_image"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/book_author_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/book_genre_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_book_genre_req"
                android:padding="@dimen/little_margin"
                app:layout_constraintEnd_toStartOf="@id/book_rank"
                app:layout_constraintStart_toEndOf="@id/book_image"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/book_genre_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_rank_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/add_book_rank_req"
            android:padding="@dimen/little_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_rank_input_text"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/add_book_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_book_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_input_container"/>
    <Button
        android:id="@+id/cancel_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_book_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>

