<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/side_margin"
    tools:context=".views.MainMenuFragment"
    android:background="@color/purple_200">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/currently_read_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/read_button"
        app:layout_constraintBottom_toTopOf="@id/my_books_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/currently_read" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/read_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/currently_read_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/library_books_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/read" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/my_books_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currently_read_button"
        app:layout_constraintEnd_toStartOf="@id/library_books_button"
        app:layout_constraintBottom_toTopOf="@id/borrowed_books_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/my_books" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/library_books_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/my_books_button"
        app:layout_constraintTop_toBottomOf="@id/read_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/wishlist_books_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/library_books" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/borrowed_books_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_books_button"
        app:layout_constraintEnd_toStartOf="@id/wishlist_books_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/borrowed_books" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wishlist_books_button"
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/borrowed_books_button"
        app:layout_constraintTop_toBottomOf="@id/library_books_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/wishlist_books" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>